--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+     <link rel="stylesheet" type="text/css" href="/css/login.css">
 </head>
 <body>
+
     <h2>Login</h2>
     <form action="/login" method="post">
         <div>
