--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -6,17 +6,17 @@
 <body>
   <h1>Edit Product</h1>
 
-  <form action="/products/edit/{id}" method="post">
-    <input type="hidden" id="id" name="id" th:value="${product.id}">
+  <form th:action="@{/products/edit/{id}(id=${product.id})}" th:object="${product}" method="post">
+    <input type="hidden" id="id" name="id" th:value="*{id}">
     
     <label for="name">Name:</label>
-    <input type="text" id="name" name="name" th:value="${product.name}" required><br>
+    <input type="text" id="name" name="name" th:value="*{name}" required><br>
 
     <label for="price">Price:</label>
-    <input type="number" id="price" name="price" th:value="${product.price}" required><br>
+    <input type="number" id="price" name="price" th:value="*{price}" required><br>
 
     <label for="description">Description:</label>
-    <textarea id="description" name="description" required>${product.description}</textarea><br>
+    <textarea id="description" name="description" required th:text="*{description}"></textarea><br>
 
     <input type="submit" value="Update">
   </form>
